deployment-app.yaml
# web-deployment.yaml
apiVersion: apps/v1
#apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: bigstart
  labels:
    app: bigstart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bigstart
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
       prometheus.io/scrape: "true"
       prometheus.io/port: "9080"
       prometheus.io/path: "/metrics"
      labels:
        app: bigstart
    #    version: v1
        sidecar.istio.io/inject: "true"  
    spec:
      #serviceAccountName: bigstart-view
      imagePullSecrets:
        - name: myregistrykey
      containers:
        - name: bigstart
          image: lauraped/bigstart
          command: ["java","-jar","-Dspring.profiles.active=prod","home/big-start-collectibles-0.0.1-SNAPSHOT.jar"]
          ports:
          - containerPort: 8090
          livenessProbe:
            periodSeconds: 120
            httpGet:
              path: /health/live
              port: 9080
              httpHeaders:
                - name: Accept
                  value: '*/*'
          readinessProbe:
            periodSeconds: 120
            httpGet:
              path: /health/ready
              port: 9080
              httpHeaders:
                - name: Accept
                  value: '*/*'
