db-service.yml
# db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
  labels:
    app: postgres
    service: db-service
spec:
  ports:
  - port: 5432
    name: "postgres"
  selector:
    app: postgres
