services-app.yaml
apiVersion: v1
kind: Service
metadata:
 name: bigstart
 labels:
  app: bigstart
  service: bigstart
spec:
 ports:
 - port: 8080
   name: http
 selector:
   app: bigstart
