istio-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bigstart
spec:
  host: "bigstart-test.info"
  trafficPolicy:
    loadBalancer:
      simple: LEAST_REQUEST
