istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bigstart
spec:
  gateways:
  - bookinfo-gateway 
  hosts:
  - "*"
  http:  
  - match:  
    - uri:
        prefix: /
    route: 
    - destination:
        host: bigstart
        port:
          number: 8080
